--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "mern-projects",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1" ,
-    "start" : "npx nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +17,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1"
-  }
+  },
+  "description": ""
 }
